[gd_scene load_steps=7 format=3 uid="uid://cognfqqs651nu"]

[ext_resource type="Script" path="res://scenes/goal_ladder/goal_ladder.gd" id="1_7fv3r"]
[ext_resource type="Texture2D" uid="uid://b3rjocfurxm7x" path="res://assets/tiles/Dungeon_Tileset.png" id="1_40wcj"]
[ext_resource type="PackedScene" uid="uid://c6558piuwf6fw" path="res://scenes/interaction_area/interaction_area.tscn" id="2_q6i7m"]
[ext_resource type="Texture2D" uid="uid://cvt0op4ynxq7c" path="res://assets/leave_bar/leave_bar1.png" id="4_7viv2"]
[ext_resource type="Texture2D" uid="uid://doq7uq8gsjnxp" path="res://assets/leave_bar/leave_bar2.png" id="5_8b1s2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6bwyg"]

[node name="GoalLadder" type="Node2D"]
z_index = 3
texture_filter = 1
script = ExtResource("1_7fv3r")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_40wcj")
region_enabled = true
region_rect = Rect2(96, 456, 32, 24)

[node name="InteractionArea" parent="." instance=ExtResource("2_q6i7m")]
action_name = "continue"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_6bwyg")

[node name="ProgressBar" type="TextureProgressBar" parent="."]
visible = false
z_index = 20
offset_left = -12.0
offset_top = -34.0
offset_right = 4.0
offset_bottom = -18.0
scale = Vector2(1.5, 1)
max_value = 2.0
step = 0.01
value = 1.0
texture_under = ExtResource("4_7viv2")
texture_progress = ExtResource("5_8b1s2")

[connection signal="value_changed" from="ProgressBar" to="." method="_on_progress_bar_value_changed"]
